[package]
name = "activities"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.26"
thiserror = "1.0"
crossbeam-channel = "0.5.8"
colored = "2.0.4"

[lib]
name = "vig"
path = "src/lib/vig.rs"
